--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <div class="img" id="imgleft"></div>
         <div class="img" id="imgright"></div>
     </div>
-    <audio autoplay loop>
-        <source src="/Bai-hat-Anh-ngan-ngo-cu-ngo-do-chi-la-giac-mo-TikTok-www_nhacchuongvui_com.mp3" type="audio/mpeg">
+    <audio controls>
+        <source src="audio/Bai-hat-Anh-ngan-ngo-cu-ngo-do-chi-la-giac-mo-TikTok-www_nhacchuongvui_com.mp3" type="audio/mpeg">
     </audio>
 </body>
 </html>
